--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,3 +1,6 @@
 rest_api_url: "https://kiwi.ulakhaberlesme.com.tr/json-rpc/"
 rest_api_username: "admin.test"
 rest_api_password: "Test123456789"
+jenkins_url: "https://jenkins-5gcn.ulakhaberlesme.com.tr"
+jenkins_username: "cem.topkaya"
+jenkins_token: "110b033bff6a4bed641ab76fa6f3704896"
