--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,3 +4,6 @@ rest_api_password: "Test123456789"
 jenkins_url: "https://jenkins-5gcn.ulakhaberlesme.com.tr"
 jenkins_username: "cem.topkaya"
 jenkins_token: "110b033bff6a4bed641ab76fa6f3704896"
+deployment_job_path: "view/DevOps/job/DevOps/job/5GCN-Deployment"
+deployment_job_token: "5gcn_deploy"
+cenk_cem: "canan"
