--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,4 +1,4 @@
-kiwi_url: "https://kiwi-test.ulakhaberlesme.com.tr/"
-rest_api_url: "https://kiwi-test.ulakhaberlesme.com.tr/json-rpc/"
+kiwi_url: "https://kiwi.ulakhaberlesme.com.tr/"
+rest_api_url: "https://kiwi.ulakhaberlesme.com.tr/json-rpc/"
 rest_api_username: "admin.test"
 rest_api_password: "Test123456789"
